// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-framework-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy AI agents and workflows built with Microsoft Agent Framework SDK to Microsoft Foundry. Handles Dockerfile generation, ACR container build, hosted agent version creation, and container startup.
USE FOR: deploy agent to Foundry, publish agent to production, host agent on Azure, deploy workflow to Foundry, go live with agent, production deployment agent, deploy agent framework app, push agent to Azure AI Foundry, containerize agent, deploy multi-agent workflow.
DO NOT USE FOR: creating agents (use agent-framework), deploying models (use models/deploy-model), deploying web apps or functions (use azure-deploy), managing quotas (use quota).
",
  "extractedKeywords": [
    "agent",
    "agent-framework",
    "agents",
    "apps",
    "azure",
    "azure-deploy",
    "build",
    "built",
    "cli",
    "container",
    "containerize",
    "creating",
    "creation",
    "deploy",
    "deploy-model",
    "deploying",
    "deployment",
    "dockerfile",
    "foundry",
    "framework",
    "functions",
    "generation",
    "handles",
    "host",
    "hosted",
    "identity",
    "live",
    "managing",
    "microsoft",
    "models",
    "multi-agent",
    "production",
    "publish",
    "push",
    "quota",
    "quotas",
    "startup",
    "version",
    "with",
    "workflow",
    "workflows",
  ],
  "name": "agent-framework-deploy",
}
`;

exports[`agent-framework-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agent-framework",
  "agents",
  "apps",
  "azure",
  "azure-deploy",
  "build",
  "built",
  "cli",
  "container",
  "containerize",
  "creating",
  "creation",
  "deploy",
  "deploy-model",
  "deploying",
  "deployment",
  "dockerfile",
  "foundry",
  "framework",
  "functions",
  "generation",
  "handles",
  "host",
  "hosted",
  "identity",
  "live",
  "managing",
  "microsoft",
  "models",
  "multi-agent",
  "production",
  "publish",
  "push",
  "quota",
  "quotas",
  "startup",
  "version",
  "with",
  "workflow",
  "workflows",
]
`;
